# linkedin-poster-client

./: .gitignore  README.md  build.py  main.py  pyproject.toml  web_app.py
src/: main.py
src/assets/: icon_placeholder.txt
