[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-post-generator"
version = "0.1.0"
description = "A simple app to send content to Make.com webhooks for LinkedIn post generation"
authors = [
    {name = "Antonio Valladares", email = "antoniovm.910320@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flet>=0.28.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/tonyvm/linkedin-poster-client"
Repository = "https://github.com/tonyvm/linkedin-poster-client.git"
Documentation = "https://github.com/tonyvm/linkedin-poster-client#readme"

[project.scripts]
linkedin-post-generator = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
