[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-poster-client"
version = "0.1.0"
description = "Cross-platform client application to send content to Make.com workflows for automated LinkedIn post generation"
authors = [
    {name = "Antonio Valladares", email = "antoniovm.910320@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Communications",
    "Topic :: Software Development :: User Interfaces",
    "Environment :: Web Environment",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
]
dependencies = [
    "flet>=0.28.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/tonyvm/linkedin-poster-client"
Repository = "https://github.com/tonyvm/linkedin-poster-client.git"
Documentation = "https://github.com/tonyvm/linkedin-poster-client#readme"
"Bug Reports" = "https://github.com/tonyvm/linkedin-poster-client/issues"
"Source Code" = "https://github.com/tonyvm/linkedin-poster-client"

[project.scripts]
linkedin-poster-client = "src.main:run_app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
